@@ -12,7 +12,9 @@ dillo-3.0.3 [not released yet]
 +- Support for CSS display property
    Patch: Johannes Hofmann
 +- Fix image input coordinates (BUG#1070)
-   Patch: corvid
+ - When location bar is given focus, temporarily show panels if hidden
+   (BUG#1093).
+   Patches: corvid
 
 -----------------------------------------------------------------------------
 
